--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ p {
     display: grid;
 }
 .tag img {
-    margin: 0px auto 0px auto;
+    margin: 1em auto 1em auto;
     width: 100px;
 }
 .tag h1 {
