--- a/main.css
+++ b/main.css
@@ -13,7 +13,14 @@ body {
 .section {
     max-width: 400px;
     margin: 1em auto 1em auto;
-    align-content: space-evenly;
+}
+
+h1 {
+    margin-bottom: 10px;
+}
+
+.text-center {
+    text-align: center;
 }
 
 table {
@@ -56,9 +63,20 @@ p {
     width: 80px;
 }
 .tag h1 {
-    margin: 14px 0px 10px 0px;
+    margin: 14px auto 10px auto;
     font-size: 16pt;
 }
 .tag th {
     width: 108px;
+}
+
+#map { 
+    height: 250px; 
+    border-radius: 12px;
+    margin: 1em 0px 1em 0px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
 }
