--- a/site/assets/main.css
+++ b/site/assets/main.css
@@ -12,6 +12,7 @@ body {
 
 .section {
     max-width: 400px;
+    min-width: 340px;
     margin: 1em auto 1em auto;
 }
 
@@ -39,14 +40,16 @@ td {
 }
 
 .wrapper {
-    display: inline-grid;
+    display: grid;
     grid-template-columns: repeat(2, [col-start] 1fr);
     grid-row-gap: 0.5em;
     grid-column-gap: 1em;
 }
 .wrapper img {
     width: 100%;
-    border-radius: 12px;  
+    aspect-ratio: 1 / 1;
+    border-radius: 12px;
+    background-color: lightgray;
 }
 
 p {
