--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -16,7 +16,7 @@
     <div class="section text-center">
 
         <h1>Quaboag Maple Co.</h1>
-        <p>Tree Inventory. Click tag for details.</p>
+        <p class="subtitle">Tree Inventory. Click tag for details.</p>
 
         {% for tree in trees %}
         <a href="tree/{{ tree.id }}">
