--- a/templates/tree.html
+++ b/templates/tree.html
@@ -80,6 +80,9 @@
         <h2>Location</h2>
         <p>{{ tree.description }}</p>
         <div id="map"></div>
+        <p>
+            Navigate with <a class="maplink" target="_blank" rel="noopener noreferrer" href="http://maps.google.com/?q=42.1890292,-72.0616784">Google Maps</a> or <a class="maplink" href="http://maps.apple.com/?q=42.1890292,-72.0616784">Apple Maps</a>.
+        </p>
     </div>
 
     <!-- Photos -->
