--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -19,7 +19,7 @@
         <p class="subtitle">Tree Inventory. Click tag for details.</p>
 
         {% for tree in trees %}
-        <a href="tree/{{ tree.id }}">
+        <a class="plain-link" href="tree/{{ tree.id }}">
             <div class="section">
                 <div class="tag">
                     <h1>Quaboag Maple Co.</h1>
