--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -99,6 +99,7 @@ p {
     color: white;
     box-shadow: none;
     opacity: 1;
+    font-weight: 500;
 }
 .map-pin-text::before {
     border: none;
