add punchout to badge

--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -22,6 +22,7 @@
         <a class="plain-link" href="tree/{{ tree.id }}">
             <div class="section">
                 <div class="tag">
+                    <div class="punchout"></div>
                     <h1>Quaboag Maple Co.</h1>
                     <table>
                         <tr>
