--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -63,19 +63,19 @@ p {
 
 .tag {
     margin: 0px auto 0px auto;
-    width: 218px;
-    height: 332px;
+    width: 215px;
+    height: 343px;
     border: 4px solid black;
-    border-radius: 12px;
+    border-radius: 14px;
     justify-content: center;
     display: grid;
 }
 .tag img {
-    margin: 1em auto 1em auto;
+    margin: 10px auto 10px auto;
     width: 80px;
 }
 .tag h1 {
-    margin: 14px auto 10px auto;
+    margin: 10px auto 10px auto;
     font-size: 16pt;
 }
 .tag th {
@@ -108,4 +108,12 @@ p {
 .plain-link {
     color: black;
     text-decoration: none;
+}
+
+.punchout {
+    background-color: lightgray;
+    height:10px;
+    border-radius: 10px;
+    margin: 14px 4.5em 0px 4.5em;
+    border: black solid 0.5px;
 }
