change yield to sap

--- a/templates/tree.html
+++ b/templates/tree.html
@@ -59,7 +59,7 @@
                 <th>SEASON</th>
                 <th>START</th>
                 <th>END</th>
-                <th>YIELD</th>
+                <th>SAP</th>
             </tr>
             {% for yield in yields %}
             <tr>
