--- a/templates/season.html
+++ b/templates/season.html
@@ -166,6 +166,7 @@
             datasets: [{
                 data: ydata,
                 backgroundColor: colors,
+                borderSkipped: false,
                 labels: {
                     font: {
                         family: 'NationalPark'
@@ -177,7 +178,7 @@
             animations: false,
             responsive: true,
             borderRadius: 100,
-            barThickness: 3,
+            barThickness: 4,
             scales: {
                 x: {
                     type: 'time',
@@ -212,6 +213,25 @@
             plugins: {
                 legend: {
                     display: false
+                },
+                tooltip: {
+                    enabled: true,
+                    titleFont: {
+                        family: 'NationalPark'
+                    },
+                    bodyFont: {
+                        family: 'NationalPark'
+                    },
+                    callbacks: {
+                        label: function(context) {
+                            max = context.raw[0]
+                            min = context.raw[1]
+                            return `Max: ${max}F, Min: ${min}F`;
+                        },
+                        title: function(context) {
+                            return context[0].label.split(', 12')[0]
+                        }
+                    }
                 }
             }
         },
