remove color icon from tooltip

--- a/templates/season.html
+++ b/templates/season.html
@@ -216,6 +216,7 @@
                 },
                 tooltip: {
                     enabled: true,
+                    displayColors: false,
                     titleFont: {
                         family: 'NationalPark'
                     },
